fixing the gap in banner

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -76,7 +76,6 @@ body
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 100px;
 }
 
 .slideshow-image {
